tests/negative/set_for_in.far
fun main() -> i64 {
  st: Set<i64> = Set<i64>()
  st.add(1)
  for x in st {
    return 0
  }
  return 0
}
